<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context="br.com.rangeldev.myimc.view.ActInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/snow"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:gravity="right"
            android:paddingEnd="20dp"
            android:text="@string/vers_o_1_0_0"
            android:textColor="@color/snow"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/desenvolvido_por"
            android:textColor="@color/snow"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/wm_digital_techs"
            android:textAllCaps="true"
            android:textColor="@color/snow"

            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/contate_nos"
            android:textColor="@color/snow"

            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
   />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/marcos_correia_rangel"
            android:textColor="@color/snow"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/desenvolvedor_android_jr"
            android:textColor="@color/snow"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email"
                android:onClick="openBrowser"
                android:paddingStart="10sp"
                android:src="@drawable/email"
                android:tag="mailto:correiarangel@bol.com.br"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/linkedin"
                android:onClick="openBrowser"
                android:src="@drawable/linkedin"
                android:tag="https://www.linkedin.com/in/marcos-fabiano-correia-rangel/" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/github"
                android:onClick="openBrowser"
                android:src="@drawable/octocat"
                android:tag="https://github.com/correiarangel/" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/snow" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/snow" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/flotBtnSair"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="1dp"
                android:clickable="true"
                android:contentDescription="@string/botao_sair"
                android:focusable="true"
                app:backgroundTint="@color/stell_pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatBtnPolitic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:contentDescription="@string/botao_privacidade"
                android:focusable="true"
                app:backgroundTint="@color/stell_pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flotBtnSair"
                app:layout_constraintVertical_bias="0.159"
                app:srcCompat="@drawable/ic_encryption" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>